welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: not found: value noDouble
	(die1, noDouble, die2) match {
               ^withoutDoubles:6: error: not found: value NoDouble
		case (die1, noDouble, die2)  if (NoDouble==true && die1==die2) => return die1+die2+1
                                                 ^withoutDoubles:6: error: type mismatch;
 found   : Any
 required: String
		case (die1, noDouble, die2)  if (NoDouble==true && die1==die2) => return die1+die2+1
                                                                                              ^withoutDoubles:7: error: not found: value NoDouble
		case (die1, noDouble, die2)  if (NoDouble==false) => return die1+die2
                                                 ^withoutDoubles:7: error: type mismatch;
 found   : Any
 required: String
		case (die1, noDouble, die2)  if (NoDouble==false) => return die1+die2
                                                                                 ^