welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {

	
	(die1, noDouble, die2) match {
		
		case (die1, noDouble, die2)  if (NoDouble==true && die1==die2) => return die1+die2+1
		case (die1, noDouble, die2)  if (NoDouble==false) => return die1+die2
	 
	}
	
}
